--- a/journal/stylesheet.css
+++ b/journal/stylesheet.css
@@ -61,6 +61,11 @@
     width: 3.5px;
 }
 
+.textContainer::-webkit-scrollbar-track,
+.toc-container::-webkit-scrollbar-track {
+    background-color: transparent;
+}
+
 .textContainer::-webkit-scrollbar-track:hover,
 .toc-container::-webkit-scrollbar-track:hover {
     background-color: #55555744;
